--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,7 @@ PORT=3000
 
 # Email Notifications (Optional)
 EMAIL_USER=barexg1@gmail.com
-EMAIL_PASSWORD=wxuf lyik wdip vwdf
+EMAIL_PASSWORD=-------
 
 NOTIFICATION_EMAIL=barexg1@gmail.com
 
