--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
   root = "backend"
-  buildCommand = "npm install && npm run build"
+  buildCommand = "npm install"
 
 [deploy]
   startCommand = "npm start"
